# Ordenamiento_Grupo5

./: README.md
datos_ordenados/: reales_ordenados1.csv  reales_ordenados1_b.csv  reales_ordenados2.csv  reales_ordenados2_b.csv  reales_ordenados3.csv  reales_ordenados3_b.csv  reales_ordenados4.csv  reales_ordenados4_b.csv  reales_ordenados5.csv  reales_ordenados5_b.csv  reales_ordenados6.csv  reales_ordenados6_b.csv
ordenamiento/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ordenamiento/include/: lib_grx.h
ordenamiento/src/: files_ops1.c  funciones_grx.c  main.c
